--- a/hogan/templates/pages/index.mustache
+++ b/hogan/templates/pages/index.mustache
@@ -1,4 +1,6 @@
-<div class="container">
-<h1>{{_i}}okayama-js{{/i}}</h1>
+    <div class="container">
 
-</div>
+      <h1>okajs Bootstrap starter template</h1>
+      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+
+    </div> <!-- /container -->
