--- a/hogan/templates/layout.mustache
+++ b/hogan/templates/layout.mustache
@@ -24,7 +24,7 @@
     <!-- Footer
     ================================================== -->
     <footer class="footer">
-      <address>okayama-js</address>
+      <address>posa.skpn.com</address>
     </footer>
 
 
