--- a/hogan/templates/nav.mustache
+++ b/hogan/templates/nav.mustache
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="./index.html">okayama-js</a>
+          <a class="brand" href="./index.html">pos:a</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="{{index}}">
